Change options and vars names, readme.md written.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-css-injector",
-  "description": "Injects css from files in the selected tag",
+  "description": "Injects css from files into the selected tag on the destination file",
   "version": "0.1.0",
   "homepage": "https://github.com/vmol/grunt-css-injector",
   "author": {
